# tailorhomefinder

./: .gitignore  HANDOFF.md  INTEGRATION_GUIDE.md  README.md
backend/: .env.example  check_stats.py  create_tables.py  init_db.py  load_data.py  pyproject.toml  run.py  test_db.py
backend/src/app/: main.py
backend/src/app/api/: admin.py  agents.py  crm.py  inquiries.py  properties.py  users.py
backend/src/app/core/: email_config.py
backend/src/app/db/: database.py
backend/src/app/models/: __init__.py  agent.py  crm.py  inquiry.py  property.py  user.py
backend/src/app/schemas/: __init__.py  agent.py  crm.py  inquiry.py  property.py  user.py
backend/src/app/services/: __init__.py  email_service.py
backend/src/app/templates/email/: inquiry_confirmation.html  inquiry_notification.html  tour_scheduled.html
data/states/az/: 85006.json  85007.json  85008.json  85009.json  85012.json  85013.json  85014.json  85015.json  85016.json  85017.json  85018.json  85019.json  85020.json  85021.json  85022.json  85023.json  85024.json  85027.json  85028.json  85029.json  85031.json  85032.json  85033.json  85034.json  85035.json  85037.json  85040.json  85041.json  85042.json  85043.json  85044.json  85045.json  85048.json  85050.json  85051.json  85053.json  85054.json  85055.json  85067.json  85083.json  (+311 more)
frontend/: .gitignore  SETUP.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/public/data/: zip_to_state.json
frontend/src/: App.vue  main.ts
frontend/src/config/: theme.ts
frontend/src/router/: index.ts
(+42 files in other folders)
