[project]
name = "backend"
version = "0.1.0"
description = "TailorHomeFinder Real Estate API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "fastapi-mail>=1.4.1",
    "geoalchemy2>=0.14.0",
    "jinja2>=3.1.2",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
